# desktoptransfer-webrtc

./: .gitignore  CMakeLists.txt  main.cpp
3rd/lib/: README.md
3rd/lib/macos/: README.md
3rd/lib/windows/: README.md
module/: WebsocketClient.cpp  WebsocketClient.h  pulse_loopback_audio_device_module.cpp  pulse_loopback_audio_device_module.h  pushclient.cpp  pushclient.h  signaling_client.cpp  signaling_client.h
tools/: signaling_server.cpp
ui/: widg.cpp  widg.h
web/: receiver.html
